remove --enable-preview where not required